# manjaliof

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
src/: cli.rs  db.rs  input.rs  main.rs  report.rs
src/db/: datetime_serializer.rs  jsondb.rs  sqlitedb.rs
src/input/: validators.rs
src/report/: client_report.rs
tests/: context.rs  integration.rs
