[package]
name = "manjaliof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.15", features = ["derive", "color"] }
dialoguer = "0.10.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
