[package]
name = "manjaliof"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.15", features = ["derive", "color"] }
dialoguer = "0.10.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"

[build-dependencies]
vergen = { version = "7.5.0", default-features = false, features = ["git"] }

[dev-dependencies]
rand = "0.8.5"
assert_cmd = "2.0.8"
